Setup packet handling and support ping protocol (#1)
- Introduced PacketReader and PacketDispatcher to read and write packets
- Added unit tests and documentation
- Cleaned up code